Add list_queue to the videos api.
